// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Intro] screen rendering test should render [Dark] theme 1`] = `
<View
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "overflow": "hidden",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "width": "100%",
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
    >
      
    </Text>
    <Text
          },
        ]
      }
    >
      
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      ,
        },i I 
          source={
            Object {
              "canInstrument": true,
              "createTransformer": [Function],
              "process": [Function],
            }
          }
          style={
            Array [
              Object {
                "height": 24,
                "left": 16,
                "position": "absolute",
                "width": 24,
              },
            ]
          }
        />
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
              },
            ]
          Login
        </Text>
      </View>
    </View>
    <View
        Object {
          "marginTop": 8,
        }
      }
    />
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-navigate"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069ccd",
              "borderColor": "#069ccd",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
              },
            ]
          }
        >
          Navigate to Temp
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "marginTop": 8, 
               tion],
   "g      e   "
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                  },
              }
            >
              Login
            </Text>
          </View>
        </View> 
         activeOpacity={0.5} 
                  "justifyContent": "center",
                  "width": 320,
                },
              ]
            }
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Navigate to Temp
            </Text>
          </View>
        </View>
        <View
>>>>>>> 041f108... Upgrade expo to sdk 38 (#29)
          style={
            Array [
              Object {
                "color": "white",
                "fontSize": 14,
              },
            ]
          }
        >
          Change theme
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isDisabled] status 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#323739",
        "flexBasis": 0,
        "flexDirection": "column",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "flex-start",
        "overflow": "hidden",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "85%",
        },
      ]
    }
  >
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        style={
          Arrt:4                "left": 16,
,   Ot   
        }
      }
    />
    <View
      activeOpacity={0.5}
      onPress={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069ccd",
              "borderColor": "#069ccd",
              "borderRadius": 4,
              "borderWidth": 2,
              "height": 52,
              "justifyContent": "center",
              "width": 320,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "white",
          testID="btn-theme"
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "backgroundColor": "#069ccd",
                  "borderRadius": 4,
                  "borderWidth": 2,
                  "height": 52,
                  "justifyContent": "center",
                  "width": 320,
                },
              ]
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "white",
                    "fontSize": 14,
                  },
                ]
              }
            >
              Change theme
            </Text>
          </View>
        </View>
>>>>>>> 041f108... Upgrade expo to sdk 38 (#29)
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render [isLoading] status 1`] = `
<View 
a  li ,,uContent": "f
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
        Array [
          Object {
            "color": "white",
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "white",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "85%",
        },
      ]
    }
  >
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069cT     T t 
                  "backgroundColor": "#069ccd",
                  "borderCol   "

                ]
              }
            >
              Change theme
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`[Intro] screen rendering test should render outer component and snapshot matches 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",e
          "alignItems": "center",
          "flexDirection": "column",
          "height": "100%",
          "justifyContent": "flex-start",
          "width": "100%",
        },
      ]
    }
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
          Object {
            "marginTop": 100,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 18,
            "lineHeight": 27,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignSelf": "center",
          "bottom": 40,
          "flexDirection": "column",
          "position": "absolute",
          "width": "85%",
        },
      ]
    }
  >
    <View
      activeOpacity={0.5}
      onPress={[Function]}
      testID="btn-login"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#069ccd",
              "borderColor": "#069ccd", {  z "